[package]
name = "nextbus"
version = "0.2.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
urlencoding = "2.1"
thiserror = "2.0.17"
